fix content overflow

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ ol[class] {
   justify-content: center;
   align-items: center;
   background: var(--background-color);
+  overflow: hidden;
 }
 
 body {
